<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingEnd="32dp"
    android:paddingStart="32dp"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ab.piggybank.AddDebtTransaction"
    tools:showIn="@layout/activity_add_debt_transaction">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/flagImage"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/flag"
                app:srcCompat="@drawable/brazil" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:paddingEnd="16dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/amount_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/currency_text"
                    android:gravity="center_vertical|end"
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/currency_text"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:textColor="@color/colorAccent" />

            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:contentDescription="@string/date"
                android:padding="4dp"
                app:srcCompat="@drawable/ic_date_range_white" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:paddingEnd="18dp"
                android:paddingStart="18dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/categoryIcon"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:padding="4dp"
                android:tint="#FFF"
                app:srcCompat="@drawable/ic_description_white_48dp"
                tools:ignore="ContentDescription" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="18dp"
                    android:layout_marginStart="18dp"
                    android:gravity="end"
                    android:hint="@string/description" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/whoIcon"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:padding="4dp"
                android:tint="#FFF"
                app:srcCompat="@color/transparent"
                tools:ignore="ContentDescription" />

            <Spinner
                android:id="@+id/whoSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="4dp"
                android:gravity="end"
                android:text="@string/ingoing_or_outgoing"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/darker_gray" />

            <RadioGroup
                android:id="@+id/typeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:orientation="horizontal"
                android:paddingEnd="18dp"
                android:paddingStart="18dp">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/ingoingRadiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/ingoing"
                    app:buttonTint="@color/colorAccent" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/outgoingRadiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outgoing"
                    app:buttonTint="@color/colorAccent" />
            </RadioGroup>
        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>
